@@ -51,7 +51,7 @@ fdm ============================================================================
 
 ### Introduction
 
-fdm is a program to fetch mail and deliver it in various ways depending on as
+fdm is a program to fetch mail and deliver it in various ways depending on a
 user-supplied ruleset. Mail may be fetched from stdin, IMAP or POP3 servers, or
 from local maildirs, and filtered based on whether it matches a regexp, its
 size or age, or the output of a shell command. It can be rewritten by an
@@ -1346,5 +1346,5 @@ match "^List-Id:.*<full-disclosure\\.lists\\.grok\\.org\\.uk>" in headers
 	action "full-disclosure"
 
 ================================================================================
-$Id: MANUAL.in,v 1.18 2007-04-13 14:07:28 nicm Exp $
+$Id: MANUAL.in,v 1.19 2007-05-11 10:57:07 nicm Exp $
 
