@@ -1,3 +1,12 @@
+10 May 2007
+
+* Fix typo in manual and use DESTDIR in *akefile, from Frank Terbeck as a result
+  of Debian package creation.
+
+09 May 2007
+
+* Code tidying in io.c and command.c.
+
 08 May 2007
 
 * Couple of fixes for stupid things in ARRAY_* macros, one of which was hiding
@@ -286,4 +295,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.78 2007-05-08 21:04:16 nicm Exp $
+$Id: CHANGES,v 1.79 2007-05-11 10:57:07 nicm Exp $
